# AiHR

./: .env.example  .gitignore  MANIFEST.in  README.md  package.json  pnpm-lock.yaml  pyproject.toml
Memor/: 2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  README.md
aihr/: hooks.py  install.py  modules.txt  patches.txt  permissions.py
aihr/api/: demo.py  recruitment.py
aihr/config/: desktop.py
aihr/events/: __init__.py  recruitment.py
aihr/services/: ai_assistant.py  mineru_api.py  recruitment_ops.py  resume_intake.py  resume_parser.py  screening.py
aihr/setup/: access.py  branding.py  client_scripts.py  custom_fields.py  demo_data.py  departments.py  metadata.py  navigation.py  (+2 more)
apps/: __init__.py
docs/: ai-assistant.md  data-model.md  development-setup.md  direct-rebuild-roadmap.md  hr-roles-process-assessment.md  i18n-rollout.md  i18n-status.md  mineru-api.md  north-star.md  resume-intake-plan.md  test-guide.md  user-manual.md  week-1-execution-plan.md  week-1-mvp.md
infra/: apps.json  devcontainer.override.yml
scripts/: bootstrap_frappe_docker.sh  install_local_app.sh  lib_env.sh  preview_screening.py  seed_demo_site.sh  start_dev_site.sh  validate_chinese_materials.py
tests/: test_access.py  test_ai_assistant.py  test_branding.py  test_departments.py  test_direct_rebuild_api.py  test_mineru_api.py  test_navigation.py  test_permissions.py  test_recruitment_api.py  test_recruitment_ops.py  test_requisition_form.py  test_resume_intake.py  test_resume_parser.py  test_screening.py  test_translations.py  test_workflows.py
(+61 files in other folders)
